--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,50 +1,37 @@
-trigger:
+trigger: 
 - master
-
-pool:
-  vmImage: 'ubuntu-latest'
-
-variables:
-  version: 1.0.2-$(Build.BuildId)
-
-stages:
-- stage: Build_Stage
-  displayName: 
-  jobs:
-  - job: BuildNuget
-    displayName: Build Nuget packages
-    variables:
-      BuildConfiguration: release
-    steps:
-
-    - task: DotNetCoreCLI@2
-      displayName: Restore Packages
-      inputs:
-        command: 'restore'
-        projects: '**/*.csproj'
-        feedsToUse: 'select'
-
-    - task: DotNetCoreCLI@2
-      displayName: Build Apps
-      inputs:
-        command: 'build'
-        projects: '**/*.csproj'
-        arguments: '--configuration $(BuildConfiguration)'
-
-    - script: printenv
-
-    - task: DotNetCoreCLI@2
-      displayName: Pack Nuget Package
-      inputs:
-        command: 'pack'
-        packagesToPack: '**/*.csproj'
-        versioningScheme: 'byEnvVar'
-        versionEnvVar: 'version'
-
-    - task: DotNetCoreCLI@2
-      displayName: Push Nuget Package
-      inputs:
-        command: 'push'
-        packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-        nuGetFeedType: 'internal'
-        publishVstsFeed: 'a02513cd-1272-4398-8fd8-5a1473eab7c5/00c683e5-28b9-42ad-a0cf-f0b29cc0b365'
+pool: 
+  vmImage: ubuntu-latest
+stages: 
+- stage: Build_stage
+  displayName: Build nuget
+  jobs: 
+  - job: Build
+    displayName: Build nuget packages
+    variables: 
+       BuildConfiguration: release
+    steps: 
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'restore'
+          projects: '**/*.csproj'
+          restoreArguments: '--configuration $(BuildConfiguration)'
+          feedsToUse: 'select'
+        displayName: dotnet restore
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'build'
+          projects: '**/*.csproj'
+          arguments: '--configuration $(BuildConfiguration)'
+        displayName: dotnet build
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'pack'
+          packagesToPack: '**/*.csproj'
+          versioningScheme: 'off'
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'push'
+          packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+          nuGetFeedType: 'internal'
+          publishVstsFeed: 'dc509265-52a3-4920-930e-bbe92d03ffc5'
