--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
         inputs:
           command: 'build'
           projects: '**/*.csproj'
-          arguments: '--configuration $(BuildConfiguration)'
+          # arguments: '--configuration $(BuildConfiguration)'
         displayName: dotnet build
       - task: DotNetCoreCLI@2
         inputs:
