--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
         inputs:
           command: 'restore'
           projects: '**/*.csproj'
-          # restoreArguments: '--configuration Release'
+          restoreArguments: '--interactive'
           feedsToUse: 'select'
         displayName: dotnet restore
       - task: DotNetCoreCLI@2
