--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,4 @@ stages:
     pool: 
       vmImage: ubuntu-latest
     steps: 
-    - script: 'my name is $(name)'
+    - script: echo 'my name is $(name)'
